<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include layout="@layout/layout_head_complex_first" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"

                    android:text="@string/phone"
                    android:textSize="@dimen/text_normal_size" />


                <EditText
                    android:id="@+id/activity_loginphone_phone_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/phone_hint"
                    android:textColorHint="@color/gray_text"
                    android:textSize="@dimen/text_normal_size" />


                <ImageView
                    android:id="@+id/activity_loginphone_phone_delete_img"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:src="@mipmap/login_input_clear_pressed" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/split_line_color" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textSize="@dimen/text_normal_size" />


                <EditText
                    android:id="@+id/activity_loginphone_pwd_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:background="@null"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gray_text"
                    android:textSize="@dimen/text_normal_size" />


                <ImageView
                    android:id="@+id/activity_loginphone_pwd_lookimg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/login_pw_invisible_normal"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/split_line_color" />

        </LinearLayout>


        <Button
            android:id="@+id/activity_loginphone_phone_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_orange_btn"
            android:text="@string/login"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_size" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp">


            <TextView
                android:id="@+id/activity_loginphone_findpwd_text"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_pwd"
                android:textSize="14px" />

            <TextView
                android:id="@+id/activity_loginphone_register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/register"
                android:textSize="14px" />


        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/split_line_color" />


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"

                android:text="@string/other_logintype" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/split_line_color" />

        </LinearLayout>

        <Button
            android:id="@+id/activity_loginphone_wchat_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_orange_btn"
            android:text="@string/wchat_login"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_size" />

    </LinearLayout>
</RelativeLayout>