<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/activity_login_finish_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_close_btn_pressed"
        android:layout_gravity="right"
        android:padding="20dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/len_80"
            android:layout_gravity="center"
            android:layout_height="@dimen/len_80"
            android:id="@+id/logo"
            android:src="@mipmap/icon_logo"
            />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_login_wchat_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_orange_btn"
            android:text="@string/wchat_login"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_size" />


        <TextView
            android:id="@+id/activity_login_more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:padding="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/more_login_type"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal_size" />

    </LinearLayout>


</FrameLayout>