<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_head_complex_first" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/register_left_margin"
        android:layout_marginRight="@dimen/register_right_margin"
        android:layout_marginTop="@dimen/len_80"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/old_password"
                android:textSize="@dimen/text_normal_size" />


            <EditText
                android:id="@+id/activity_register_three_pwd_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2.5"
                android:inputType="textPassword"
                android:background="@null"
                android:maxLength="16"
                android:hint="@string/hint_old"
                android:textColorHint="@color/gray_text"
                android:textSize="@dimen/text_normal_size" />


            <ImageView
                android:id="@+id/activity_register_three_pwd_lookimg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/login_pw_invisible_normal" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/split_line_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/new_password"
                android:textSize="@dimen/text_normal_size" />


            <EditText
                android:id="@+id/activity_update_three_new_password_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/register_three_pwd"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_text"

                android:textSize="@dimen/text_normal_size" />

            <ImageView
                android:id="@+id/activity_update_three_new_password_delete_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@mipmap/login_input_clear_pressed"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/activity_update_new_password_lookimg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:src="@mipmap/login_pw_invisible_normal" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/split_line_color" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/makesure_pwd"
                android:textSize="@dimen/text_normal_size" />


            <EditText
                android:id="@+id/activity_register_three_againpwd_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/register_three_againpwd"
                android:textColorHint="@color/gray_text"

                android:textSize="@dimen/text_normal_size" />

            <ImageView
                android:id="@+id/activity_register_three_againpwd_delete_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:src="@mipmap/login_input_clear_pressed"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/activity_register_three_againpwd_lookimg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:src="@mipmap/login_pw_invisible_normal" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/split_line_color" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_register_three_complete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_orange_btn"
        android:text="@string/sure"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        android:textSize="@dimen/text_big_size" />
</LinearLayout>