<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical">


    <include layout="@layout/layout_head" />


    <TextView
        android:id="@+id/score_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_title_gray"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="200"
        android:textColor="@color/white"
        android:textSize="48dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/score_exchange_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/icon_score_exchange"
            android:gravity="center_horizontal"
            android:text="@string/score_exchange"
            android:textSize="@dimen/len_14" />


        <TextView
            android:id="@+id/score_detial_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/icon_score_detial"
            android:gravity="center_horizontal"
            android:text="@string/score_detial"
            android:textSize="@dimen/len_14" />

        <TextView
            android:id="@+id/score_rule_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/icon_score_rule"
            android:gravity="center_horizontal"
            android:text="@string/score_rule"
            android:textSize="@dimen/len_14" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="任务"
        android:textColor="#666666"
        android:textSize="@dimen/len_14" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/score_swiperefreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/score_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>